# Breakout

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml  cmake-windows.yml
game/: annotations.lua  game.lua  level.lua  level_settings.lua  screen_manager.lua  utils.lua
game/assets/sounds/: README.txt
game/breakout/: ball.lua  breakout.lua  paddle.lua  wall.lua
game/levels/: level1.lua  level2.lua  level3.lua  level4.lua
game/screens/: game_over_screen.lua  game_screen.lua  next_level_screen.lua  start_screen.lua  win_screen.lua
libraries/aubio/lib/: aubio.lib
libraries/lua/: onelua.c
src/: Game.cpp  Game.h  GameEngine.cpp  GameEngine.h  GameWinMain.cpp  RaycastCommon.cpp  RaycastCommon.h  Rectangle.cpp  Rectangle.h  Vector.cpp  Vector.h
